--- a/carts.html
+++ b/carts.html
@@ -79,7 +79,7 @@
                   </div>
                   <div class="col-xl-3">
                     <div class="m-cart__footer">
-                      <p class="m-cart__text">NT$ 666</p><a class="m-cart__link d-none d-xl-flex" href=""><i class="material-icons">delete_outline</i></a>
+                      <p class="m-cart__price">NT$ 666</p><a class="m-cart__link d-none d-xl-flex" href=""><i class="material-icons">delete_outline</i></a>
                     </div>
                   </div>
                 </div>
