--- a/checkout-3.html
+++ b/checkout-3.html
@@ -61,7 +61,7 @@
                   </div>
                 </div>
                 <div class="col-12 mb-1" id="electronic-invoice-email">
-                  <label class="m-form__label" for="invoice-email">電子郵件信箱</label>
+                  <label class="m-form__label mb-s1" for="invoice-email">電子郵件信箱</label>
                   <input class="m-form__control" id="invoice-email" type="email" name="invoice-email" placeholder="example@email.com"/>
                 </div>
                 <div class="row h-gutter-s1 mb-1" id="paper-invoice-address">
