--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-12 col-xl-5 h-bg-light my-xl-1">
           <div class="p-login__community">
-            <h3 class="p-login__title d-none d-xl-inline-block">連結社群帳號</h3><a class="e-btn p-login__e-btn"><img class="e-image" width="108" src="img/icon/facebook.svg" alt=""/></a><a class="e-btn p-login__e-btn"> <img class="e-image" width="94" src="img/icon/google.svg" alt=""/></a><a class="e-btn p-login__e-btn"> <img class="e-image" width="97" src="img/icon/yahoo.svg" alt=""/></a>
+            <h3 class="p-login__title d-none d-xl-inline-block">連結社群帳號</h3><a class="e-btn e-btn_p-login"><img class="e-image" width="108" src="img/icon/facebook.svg" alt=""/></a><a class="e-btn e-btn_p-login"><img class="e-image" width="94" src="img/icon/google.svg" alt=""/></a><a class="e-btn e-btn_p-login"><img class="e-image" width="97" src="img/icon/yahoo.svg" alt=""/></a>
           </div>
         </div>
         <div class="col-12 col-xl-5">
