--- a/checkout-3.html
+++ b/checkout-3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="zh-Hant-TW"></html>
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -62,15 +62,15 @@
                 </div>
                 <div class="col-12 mb-1" id="electronic-invoice-email">
                   <label class="m-form__label mb-s1" for="invoice-email">電子郵件信箱</label>
-                  <input class="m-form__control" id="invoice-email" type="email" name="invoice-email" placeholder="example@email.com"/>
+                  <input class="m-form__control" type="email" name="invoice-email" placeholder="example@email.com"/>
                 </div>
                 <div class="row h-gutter-s1 mb-1" id="paper-invoice-address">
                   <div class="col-6">
-                    <label class="m-form__label mb-s1" for="invoice-address">地址</label>
+                    <label class="m-form__label mb-s1">地址</label>
                   </div>
                   <div class="col-6 d-flex align-items-center justify-content-end">
                     <div class="m-form__checkbox">
-                      <input id="same-address" type="checkbox" name="same-address"/>
+                      <input type="checkbox" name="same-address"/>
                       <label for="same-address"></label>同運送地址
                     </div>
                   </div>
